# DSA_1_2025

labs/lab_01/: CMakeLists.txt  functions.c  functions.h  main.c
labs/lab_02/: CMakeLists.txt  functions.c  functions.h  main.c
labs/lab_03/: CMakeLists.txt  library.h  main.c
labs/lab_03/Students/: student_functions.c  student_functions.h
labs/lab_04/: CMakeLists.txt  main.c
labs/lab_04/char_stack/: char_stack_functions.c  char_stack_functions.h
labs/lab_04/int_stack/: int_stack_functions.c  int_stack_functions.h
labs/lab_05/: CMakeLists.txt
labs/lab_05/src/: glass.c  glass.h  glasses_circular_queue.c  glasses_circular_queue.h  main.c  main.h
labs/lab_09/: simple_list_functions.h
labs/lab_10/operations-with-tree/: CMakeLists.txt  friends.c  friends.h  main.c  main.h
labs/lab_11/operations-with-binary-search-tree/: CMakeLists.txt  main.c
labs/lab_11/operations-with-binary-tree/: CMakeLists.txt  main.c
labs/lab_12/: CMakeLists.txt  main.c
labs/lab_12/headers/: binary_tree.h  book.h  main.h
labs/lab_12/inputs/: books.txt
labs/lab_12/sources/: binary_tree.c  book.c
labs/lab_13/: CMakeLists.txt  main.c
labs/lab_13/headers/: constants.h  hash_table.h
labs/lab_13/sources/: hash_table.c
labs/lab_14/: CMakeLists.txt  main.c
labs/lab_14/headers/: heapSort.h  main.h
labs/lab_14/sources/: heapSort.c
tests/test_parcialis/: pasta.h  talca.c  talca.h
tests/test_parcialis/input/: pasta.txt
treap_project/: CMakeLists.txt  main.2.c  main.c
treap_project/headers/: main.h  treap.h
treap_project/sources/: treap.c
(+17 files in other folders)
